# lundega

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
docs/: handshake.md  notes.md  registry.md  tools.md
src/: app.rs  lib.rs  main.rs
src/agent/: bot.rs  factory.rs
src/app/: mod.rs
src/app/agent/: bot.rs  mod.rs
src/app/blockchain/: block.rs  mod.rs  passport.rs  wallet.rs
src/app/registry/: database.rs  mod.rs
src/app/ui/: camera.rs  console.rs  debug_ui.rs  mod.rs
src/app/ui/console/: mod.rs
src/blockchain/: consensus.rs  mod.rs  wallet.rs
src/console/: blockchain.rs  mod.rs  remover.rs  spawner.rs
src/registry/: mod.rs
src/simulation/: mod.rs
src/simulation/agent/: bot.rs  mod.rs
src/simulation/resource/: mod.rs
web/: index.html
