[package]
name = "lundega"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["wayland"] }
tokio = "1.43.0"
hbbft = { version = "0.1.1", features = ["no-simd"] }
clap = "4.5.27"
log = { version = "0.4", features = [
    # Compile low-severity logs out of native builds for performance.
    "max_level_debug",
    "release_max_level_warn",
] }
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.12.1", features = ["v4"] }
bevy_console = { version = "0.13.1", optional = true }
bevy-inspector-egui = { version = "0.29.1", features = ["highlight_changes"], optional = true }
rusqlite = "0.34.0"
krabmaga = { version = "0.5.0", features = ["bayesian", "clap", "parallel", "serde", "serde_json", "tokio", "visualization"] }
bevy_spacetimedb = "0.2.2"
bevy_common_assets = { version = "0.12.0", features = ["ron", "yaml"] }
bevy_egui = { version = "0.33.0", features = ["serde"] }
avian2d = { version = "0.2.1", features = ["serialize"] }
big-brain = "0.22.0"

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/bevy_dev_tools",
    "bevy/dynamic_linking",
    "bevy_console",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]
inspect = [
    "bevy-inspector-egui",
]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"


# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# The default profile is optimized for Wasm builds because
# that's what [Trunk reads](https://github.com/trunk-rs/trunk/issues/605).
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Override some settings for native builds.
[profile.release-native]
# Default to release profile values.
inherits = "release"
# Optimize with performance in mind.
opt-level = 3
# Keep debug information in the binary.
strip = "none"
